# ez-txt2html

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.toml  dev-requirements.txt  format.py  pyproject.toml  pyvenv.cfg  setup-build.py  setup.py
Scripts/: activate  activate.bat
docs/: blogPost.hmtl  index.html
examples/: blogPost.txt  config.toml  mdToHtml.md  til-txtToHtml.txt  til.md
examples/HTML/: blogPost.html
ez-txt2html/: ez_txt2html.py
ez-txt2html/tests/: test_textToHtmlConverter.py
src/: ez-txt2html.py  ezTxtToHtml.py  ez_txt2html.py  test_textToHtmlConverter.py
src/utilities/: process_arguments.py  process_configurations.py
til/: blogPost.html  til-txtToHtml.html
