[project]
name = "ez-txt2html-bryce-seefieldt"
version = "1.0.2"
authors = [
{ name="Bryce Seefieldt", email="bryce.seefieldt@gmail.com" },
]
description = "a simple open-source Python program that converts plain text and markdown files (.txt, .md) into HTML files (.html)"
readme = "./README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ez-txt2html"]
[project.urls]
Homepage = "https://github.com/bryce-seefieldt/ez-txt2html"
Issues = "https://github.com/bryce-seefieldt/ez-txt2html/issues"

[tool.black] 
line-length = 79